# magma

./: Cargo.toml  build.rs
crates/magma_app/: Cargo.toml
crates/magma_app/src/: app.rs  lib.rs
crates/magma_derive/: Cargo.toml
crates/magma_derive/src/: lib.rs
crates/magma_entities/: Cargo.toml
crates/magma_entities/src/: camera.rs  component.rs  entity.rs  lib.rs  world.rs
crates/magma_input/: Cargo.toml
crates/magma_input/src/: handler.rs  keyboard.rs  lib.rs
crates/magma_internal/: Cargo.toml
crates/magma_internal/src/: lib.rs
crates/magma_render/: Cargo.toml
crates/magma_render/src/: buffer.rs  constants.rs  debug.rs  device.rs  lib.rs  model.rs  pipeline.rs  platforms.rs  render_system.rs  renderer.rs  swapchain.rs  utils.rs
crates/magma_renderer/: Cargo.toml
crates/magma_shaders/: Cargo.toml
crates/magma_vulkan/: Cargo.toml
crates/magma_vulkan/src/: buffer.rs  commands.rs  core.rs  debugger.rs  descriptors.rs  device.rs  framebuffer.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs  utils.rs
crates/magma_vulkan/src/core/: commands.rs  debugger.rs  device.rs  instance.rs  surface.rs  swapchain.rs
crates/magma_vulkan/src/core/commands/: buffer.rs  pool.rs
crates/magma_vulkan/src/core/device/: logical.rs  physical.rs
crates/magma_vulkan/src/descriptors/: allocator.rs  cache.rs
crates/magma_vulkan/src/pipeline/: config.rs  shader.rs  ubo.rs  vertex.rs
crates/magma_vulkan/src/shaders/: builder.rs
crates/magma_window/: Cargo.toml
crates/magma_window/src/: events.rs  lib.rs  window.rs
examples/: base.rs  cube.rs  descriptors.rs  index.rs  push_constant.rs  quad.rs  simple.vert  teapot.rs  testbed.rs  triangle.rs  triangles.rs  vertex.rs
examples/resizing/: main.rs
examples/triangle/: main.rs
shaders/: cube.vert  descriptors.vert  descriptors.vert.spv  push_constant.vert  push_constant.vert.spv  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv  teapot.vert  teapot.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
shaders/simple-shader/: Cargo.toml
shaders/simple-shader/src/: lib.rs
src/: app.rs  buffer.rs  camera.rs  components.rs  constants.rs  debug.rs  descriptors.rs  device.rs  engine.rs  entity.rs  input.rs  lib.rs  mesh.rs  model.rs  movement_system.rs  pipeline.rs  platforms.rs  renderable.rs  renderer.rs  swapchain.rs  utils.rs  vulkan.rs  window.rs
src/renderer/: device.rs  pipeline.rs  shader.rs  simple_render_system.rs  swapchain.rs
src/utils/: constants.rs  debug.rs  platforms.rs
src/vulkan/: device.rs  pipeline.rs  swapchain.rs
