[package]
name = "magma"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
magma_derive = { path = "crates/magma_derive", version = "0.1.0" }
winit = "0.26.1"
log = "0.4.14"
ash = "0.36.0"
tobj = "3.2.1"
memoffset = "0.6.5"
glam = "0.20.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }

[dev-dependencies]
simple_logger = "2.1.0"
