[package]
name = "magma"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
magma_vulkan = { path = "crates/magma_vulkan", version = "0.1.0" }
magma_derive = { path = "crates/magma_derive", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }

[dev-dependencies]
simple_logger = "2.1.0"
anyhow = "1.0.56"
winit = "0.26.1"
