[package]
name = "magma_render"
version = "0.1.0"
edition = "2021"

[dependencies]
magma_derive = { path = "../magma_derive", version = "0.1.0" }
ash = "0.36.0"
winit = "0.26.1"
log = "0.4.14"
tobj = "3.2.1"
memoffset = "0.6.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }
