[package]
name = "magma_vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.36.0"
log = "0.4.14"
winit = "0.26.1"
bitflags = "1.3.2"
thiserror = "1.0.30"
spirv-reflect = "0.2.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }
